# genai-monorepo-template

./: .editorconfig  .gitignore  .prettierignore  CODEOWNERS  README.md  docker-compose.dev.yml  docker-compose.yml  mongo-init.js  nx.json  package.json  pnpm-lock.yaml  postgres-init.sql  tsconfig.base.json  tsconfig.json
apps/ai/: .env.template  Dockerfile  README.md  project.json  pyproject.toml  server.py  testing.ipynb
apps/ai/app/models/: __init__.py  query_models.py
apps/ai/app/pipelines/: __init__.py  ingest_documents.py  self_query_qdrant.py
apps/ai/app/routers/: __init__.py  pipelines.py
apps/ai/app/utils/: __init__.py  aiml_api_models.py  logger.py  mongodb.py  nvidia_models.py  openai_embeddings.py  qdrant_store.py  settings.py
apps/genai-monorepo-template/: package.json  tsconfig.json
apps/genai-monorepo-template/app/: layout.tsx  page.tsx
apps/infrastructure-mongodb/: project.json
apps/infrastructure-postgres/: project.json
apps/infrastructure-qdrant/: project.json
apps/langflow/: project.json  sample_inputs.md
apps/n8n/: project.json
apps/web/: eslint.config.mjs  next.config.mjs  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/messages/: en.json
env/: langflow.env.template  mongo.env.template  n8n.env.template  postgres.env.template
