[project]
name = "ai"
version = "0.1.0"
authors = ["konradbjk <konradbjk@gmail.com>"]
description = "Project Template with langchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain-nvidia-ai-endpoints>=0.3.10",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.16",
    "langchain-qdrant>=0.2.0",
    "lark>=1.2.2",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.12.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "langchain-community>=0.3.23",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
